--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    margin: 0px 158px;
+    margin-left: 140px;
+    margin-right: 160px;
     padding-top: 50px;
     padding-bottom: 50px;
     align-items: center;
@@ -47,7 +48,9 @@
 /* section design */
 .section1 {
     display: flex;
-    margin: 40px 158px;
+    margin-left: 140px;
+    margin-right: 160px;
+    margin-bottom: 100px;
     justify-content: space-between;
     align-items: center;
 }
@@ -63,4 +66,17 @@
 .section1-image {
     border: none;
     border-radius: 48px;
+}
+/* section2 design */
+.section2 {
+    padding: 50px 80px;
+    background-color: #D6DDED;
+    margin-left: 140px;
+    margin-right: 160px;
+    border-radius: 24px;
+}
+.section-title2 {
+    font-size: 38px;
+    font-weight: bold;
+    text-align: center;
 }
