--- a/style.css
+++ b/style.css
@@ -79,4 +79,20 @@
     font-size: 38px;
     font-weight: bold;
     text-align: center;
+    margin-bottom: 40px;
+}
+.section2-content {
+    display: flex;
+    justify-content: space-around;
+}
+.summary h1 {
+    color: #4E47FF;
+    font-size: 80px;
+    font-weight: bold;
+    font-family: "Inter", sans-serif;
+}
+.summary p {
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+    color: #8987A1;
 }
