--- a/style.css
+++ b/style.css
@@ -137,3 +137,11 @@
 .easy h6 {
     color: #757575;
 }
+.section4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 140px;
+    margin-right: 160px;
+    padding: 71px 150px;
+}
