--- a/style.css
+++ b/style.css
@@ -145,3 +145,15 @@
     margin-right: 160px;
     padding: 71px 150px;
 }
+.section4 h2 {
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.section4 p, button {
+    margin-bottom: 20px;
+    font-family: "Raleway", sans-serif;
+}
+.section4 img {
+    border-radius: 48px;
+}
