--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@
 .easy h6 {
     color: #757575;
 }
+.control {
+    border-radius: 50%;
+}
 .section4 {
     display: flex;
     flex-direction: column;
